--- a/assets/css/section/_nav.scss
+++ b/assets/css/section/_nav.scss
@@ -14,14 +14,18 @@
 
     @media (max-width: 768px) {
         width: 100%;
+        padding: 20px 20px 35px;
+        align-items: center;
+        gap: 40px;
     }
 
-    // &__container {
-    //     display: flex;
-    //     flex-direction: column;
-    //     gap: 600px;
-    // }
-
+    &__div {
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
 
 
     &__logo {
@@ -45,7 +49,7 @@
             color: #000;
 
             @media (max-width: 1024px) {
-                font-size: 20px;
+                font-size: 15px;
             }
         }
 
@@ -55,6 +59,10 @@
             line-height: 15px;
             letter-spacing: -0.01em;
             color: #838383;
+
+            @media (max-width: 1024px) {
+                font-size: 7px;
+            }
         }
     }
 
@@ -81,6 +89,9 @@
         @media (max-width: 768px) {
             flex-direction: row;
             flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            width: 200px;
         }
     }
 
@@ -89,6 +100,7 @@
         @media (max-width: 768px) {
             flex: 1 1 auto;
         }
+
         &-link {
             font-weight: 500;
             font-size: 14px;
@@ -109,18 +121,10 @@
                 width: 150px;
             }
 
+            @media (max-width: 768px) {
+                width: 170px;
+            }
 
-
-            // &::after {
-            //     content: "";
-            //     position: absolute;
-            //     width: 6px;
-            //     height: 10px;
-            //     background: url(../../assets/images/link-arrow.svg);
-            //     top: 50%;
-            //     right: 19px;
-            //     stroke: #9197B3;
-            // }
 
             &-first {
                 justify-content: left;
