--- a/assets/css/section/_table.scss
+++ b/assets/css/section/_table.scss
@@ -6,6 +6,12 @@
     &__section {
         padding-top: 41px;
         width: 100%;
+
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__hello-img {
@@ -124,6 +130,7 @@
     &__terms {
         border-bottom: 1px solid #EEEEEE;
         padding-bottom: 24px;
+
     }
 
     th:first-child {
@@ -321,11 +328,12 @@
     }
 }
 
-// @media (max-width: 1024px) {
-//     .table__terms > td {
-//         padding-left: 20px;
-//     }
-//     .table__terms > td{
-//         padding-right: 20px;
-//     }
-//     }
+@media (max-width: 480px) {
+    .table__terms > td {
+        padding: 0 50px;
+    }
+
+    .table__pagination {
+        gap: 5px;
+    }
+    }
